// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AttachmentFile > SHOULD match snapshot with all props 1`] = `
<div>
  <div
    class="css-187x5qv"
    data-testid="AttachmentFile"
  >
    <svg
      class="css-1u8qly9"
      data-testid="Icon-fileCopy"
      fill="#474747"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.3334 1.33325H2.66675V22.6666H5.33341V3.99992H21.3334V1.33325ZM20.0001 6.66658L28.0001 14.6666V30.6666H8.00008V6.66658H20.0001ZM18.6667 15.9999H26.0001L18.6667 8.66658V15.9999Z"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      />
    </svg>
    <div
      class="css-4s8dzb"
    >
      <div
        class="css-1u8qly9"
        data-testid="Tooltip-wrapper"
      >
        <div
          class="css-oqkox1"
          data-testid="AttachmentFile-name"
        >
          report.pdf
        </div>
      </div>
      <div
        class="css-ct9q29"
        data-testid="AttachmentFile-meta"
      >
        <span
          class="css-7401vy"
        >
          PDF
        </span>
        <span
          class="css-7401vy"
        >
          ·
        </span>
        <span
          class="css-7401vy"
        >
          1.2 MB
        </span>
      </div>
    </div>
    <button
      aria-label="Remove file"
      class="css-1jtlk8k"
      data-testid="AttachmentFile-remove"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="css-0"
        data-testid="Button-icon-start"
      >
        <svg
          class="css-1u8qly9"
          data-testid="Icon-cross"
          fill="none"
          height="18"
          viewBox="0 0 14 14"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`AttachmentFile > SHOULD match snapshot without meta 1`] = `
<div>
  <div
    class="css-187x5qv"
    data-testid="AttachmentFile"
  >
    <svg
      class="css-1u8qly9"
      data-testid="Icon-fileCopy"
      fill="#474747"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.3334 1.33325H2.66675V22.6666H5.33341V3.99992H21.3334V1.33325ZM20.0001 6.66658L28.0001 14.6666V30.6666H8.00008V6.66658H20.0001ZM18.6667 15.9999H26.0001L18.6667 8.66658V15.9999Z"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      />
    </svg>
    <div
      class="css-4s8dzb"
    >
      <div
        class="css-1u8qly9"
        data-testid="Tooltip-wrapper"
      >
        <div
          class="css-oqkox1"
          data-testid="AttachmentFile-name"
        >
          report.pdf
        </div>
      </div>
    </div>
    <button
      aria-label="Remove file"
      class="css-1jtlk8k"
      data-testid="AttachmentFile-remove"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="css-0"
        data-testid="Button-icon-start"
      >
        <svg
          class="css-1u8qly9"
          data-testid="Icon-cross"
          fill="none"
          height="18"
          viewBox="0 0 14 14"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`AttachmentFile > SHOULD match snapshot without remove button 1`] = `
<div>
  <div
    class="css-187x5qv"
    data-testid="AttachmentFile"
  >
    <svg
      class="css-1u8qly9"
      data-testid="Icon-fileCopy"
      fill="#474747"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.3334 1.33325H2.66675V22.6666H5.33341V3.99992H21.3334V1.33325ZM20.0001 6.66658L28.0001 14.6666V30.6666H8.00008V6.66658H20.0001ZM18.6667 15.9999H26.0001L18.6667 8.66658V15.9999Z"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      />
    </svg>
    <div
      class="css-4s8dzb"
    >
      <div
        class="css-1u8qly9"
        data-testid="Tooltip-wrapper"
      >
        <div
          class="css-oqkox1"
          data-testid="AttachmentFile-name"
        >
          report.pdf
        </div>
      </div>
      <div
        class="css-ct9q29"
        data-testid="AttachmentFile-meta"
      >
        <span
          class="css-7401vy"
        >
          PDF
        </span>
        <span
          class="css-7401vy"
        >
          ·
        </span>
        <span
          class="css-7401vy"
        >
          1.2 MB
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AttachmentFile > isLoading > SHOULD match snapshot when isLoading 1`] = `
<div>
  <div
    class="css-187x5qv"
    data-testid="AttachmentFile"
  >
    <svg
      class="css-1u8qly9"
      data-testid="Icon-fileCopy"
      fill="#474747"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.3334 1.33325H2.66675V22.6666H5.33341V3.99992H21.3334V1.33325ZM20.0001 6.66658L28.0001 14.6666V30.6666H8.00008V6.66658H20.0001ZM18.6667 15.9999H26.0001L18.6667 8.66658V15.9999Z"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      />
    </svg>
    <div
      class="css-4s8dzb"
    >
      <div
        class="css-1u8qly9"
        data-testid="Tooltip-wrapper"
      >
        <div
          class="css-oqkox1"
          data-testid="AttachmentFile-name"
        >
          report.pdf
        </div>
      </div>
      <div
        class="css-ct9q29"
        data-testid="AttachmentFile-meta"
      >
        <span
          class="css-7401vy"
        >
          PDF
        </span>
        <span
          class="css-7401vy"
        >
          ·
        </span>
        <span
          class="css-7401vy"
        >
          1.2 MB
        </span>
      </div>
    </div>
    <button
      aria-busy="true"
      aria-label="Remove file"
      class="css-1jtlk8k"
      data-testid="AttachmentFile-remove"
      disabled=""
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="css-7rcsk"
        data-testid="Loader"
      />
    </button>
  </div>
</div>
`;
